# PolySym

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
polysym/: __init__.py  dummy_mp.py  eval_rank.py  evaluation.py  funsearch.py  halloffame.py  model.py  prompt.txt  regressor.py  torch_operators.py  torch_operators_2.py  torch_operators_batched.py  torch_operators_unbatched.py  utils.py  utils_expr.py
polysym/experiments/: constrained_expr.ipynb  debug_nans.ipynb  debugging.py  paper_exp.ipynb  testing1.ipynb  testing2.ipynb  testing3.ipynb
tests/: test_all.py  test_regressor_mp.py  tests_operators.py  tests_regressor.py
