[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polysym"
version = "0.1.0"
description = "A Python package for Polymorphic Symbolic Regression"
authors = [
    { name="Nizar Michaud", email="nizar.michaud@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
