[metadata]
name = polysym
version = 0.1.0
description = A Python package for Polymorphic Symbolic Regression
author = Nizar Michaud
author_email = nizar.michaud@gmail.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7